# linear-haskell-exercises

./: Cake.hs  Examples.hs  Exercises.hs  LinearCake.hs  NonLinearCake.hs  OnTests.hs  linear.cabal
