cabal-version:      3.0
name:               linear
version:            0.1.0.0
author:             Jessica Shi
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Examples
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.22.0.0
                    , linear-base
    hs-source-dirs:   .
    default-language: Haskell2010
